exercises/services_and_tasks/ecs_services.tf
resource "aws_ecs_service" "service_customer1" {
  name            = "${local.app_name}-service-customer1"
  cluster         = aws_ecs_cluster.this.id
  task_definition = aws_ecs_task_definition.this.arn
  desired_count   = 1
  launch_type     = "FARGATE"

  network_configuration {
    security_groups = [aws_security_group.ecs_tasks.id]
    subnets = [
      aws_subnet.public_a.id,
      aws_subnet.public_b.id,
      aws_subnet.public_c.id,
    ]
    assign_public_ip = true
  }

  deployment_minimum_healthy_percent = 90
  deployment_maximum_percent         = 100
  force_new_deployment               = true
}

resource "aws_ecs_service" "service_customer2" {
  name            = "${local.app_name}-service-customer2"
  cluster         = aws_ecs_cluster.this.id
  task_definition = aws_ecs_task_definition.this.arn
  desired_count   = 2
  launch_type     = "FARGATE"

  network_configuration {
    security_groups = [aws_security_group.ecs_tasks.id]
    subnets = [
      aws_subnet.public_a.id,
      aws_subnet.public_b.id,
      aws_subnet.public_c.id,
    ]
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.this.arn
    container_name   = local.app_name
    container_port   = 80
  }

  deployment_minimum_healthy_percent = 0
  deployment_maximum_percent         = 200
  force_new_deployment               = true
}

# # TODO - Uncomment the following block to create a third service
# resource "aws_ecs_service" "service_customer3" {
#   name            = "${local.app_name}-service-customer3"
#   cluster         = aws_ecs_cluster.this.id
#   task_definition = aws_ecs_task_definition.broken_task_definition.arn
#   desired_count   = 1
#   launch_type     = "FARGATE"

#   network_configuration {
#     security_groups = [aws_security_group.ecs_tasks.id]
#     subnets = [
#       aws_subnet.public_a.id,
#       aws_subnet.public_b.id,
#       aws_subnet.public_c.id,
#     ]
#     assign_public_ip = true
#   }

#   deployment_minimum_healthy_percent = 90
#   deployment_maximum_percent         = 100
#   force_new_deployment               = true
# }
